# du

./: Cargo.toml  README.md
.github/workflows/: build.yml
pages/: index.html
src/: args.rs  format.rs  main.rs  traversal.rs
