[package]
name = "du"
version = "0.1.0"
edition = "2021"
description = "A cross-platform disk usage tool (Windows equivalent of Linux du)"

[[bin]]
name = "du"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
